# FrysEngineGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  FrysEngineGLExample.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
Builds/FrysEngineGL/ExampleProject/: ExampleProject.vcxproj  ExampleProject.vcxproj.filters
Builds/libraries/frysgl/: frysgl.vcxproj  frysgl.vcxproj.filters
FrysEngineGL/: CMakeLists.txt
FrysEngineGL/ExampleProject/: CMakeLists.txt  Shader.cpp  Shader.h  main.cpp
FrysEngineGL/ExampleProject/assets/shaders/: default.vert
FrysEngineGL/ExampleProject/shaders/: default.frag  default.vert
frysgl/: CMakeLists.txt
frysgl/include/frysGL/buffer/: VertexArrayObject.h  VertexBufferObject.h
frysgl/include/frysGL/camera/: Camera.h
frysgl/include/frysGL/mesh/: Mesh.h
frysgl/include/frysGL/shader/: Shader.h
frysgl/src/buffer/: VertexArrayObject.cpp  VertexBufferObject.cpp
frysgl/src/camera/: Camera.cpp
frysgl/src/mesh/: Mesh.cpp
frysgl/src/shader/: Shader.cpp
libraries/frysgl/: CMakeLists.txt
libraries/frysgl/include/frysGL/buffer/: VertexArrayObject.h  VertexBufferObject.h
libraries/frysgl/include/frysGL/camera/: Camera.h
libraries/frysgl/include/frysGL/core/: Device.h
libraries/frysgl/include/frysGL/shader/: Shader.h
libraries/frysgl/src/frysGL/camera/: Camera.cpp
libraries/frysgl/src/frysGL/core/: Device.cpp
libraries/frysgl/src/frysGL/shader/: Shader.cpp
